fix: improve sizing and spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,3 @@
   --sh-property: #73daca;
   --sh-entity: #e0af68;
 }
-
-body {
-  @apply text-sm;
-}
